modified:   cw4/Makefile 	modified:   cw4/README 	modified:   cw4/program4.c 	deleted:    cw5/.idea/.gitignore 	deleted:    cw5/.idea/misc.xml 	modified:   cw5/Makefile 	modified:   cw5/README 	modified:   cw5/consumer.c 	modified:   cw5/producer.c 	deleted:    cw5/producer.txt 	new file:   cw5/program5.c 	deleted:    cw5/programA.c 	new file:   cw5/source.txt 	deleted:    cw6/.idea/.gitignore 	deleted:    cw6/.idea/misc.xml

--- a/cw4/Makefile
+++ b/cw4/Makefile
@@ -12,6 +12,8 @@ SYSNAME = $(shell uname -s)
 NAME1 = program4
 SOURCE_FILE = source.txt
 DESTINATION_FILE = consumer.txt
+UPLOAD = 20
+DOWNLOAD = 20
 
 # Programy wykonawcze
 EXEC1 = $(NAME1).x
@@ -39,7 +41,7 @@ $(EXEC1): $(OBJS1)
 
 # uruchomienie programu
 run: $(EXEC1)
-	./$(EXEC1) $(SOURCE_FILE) $(DESTINATION_FILE)
+	./$(EXEC1) $(SOURCE_FILE) $(DESTINATION_FILE) $(DOWNLOAD) $(UPLOAD)
 	diff -s $(SOURCE_FILE) $(DESTINATION_FILE)
 
 .PHONY: clean tar
@@ -51,4 +53,3 @@ clean:
 # Archiwizacja i kompresja
 tar: clean
 	(cd ../; tar -cvzf $(DIR).tar.gz  $(DIR) )
-
