--- a/cw5/Makefile
+++ b/cw5/Makefile
@@ -1,63 +1,83 @@
+
+# rozszerzenia plików
 .SUFFIXES: .c .cpp .o .x .h
+
+# nazwa obecnego katalogu
 DIR = $(notdir $(CURDIR))
+
+# nazwa systemu operacyjnego
 SYSNAME = $(shell uname -s)
 
-NAME1 = programA
+#rdzenie nazw plików
+NAME1 = program5
 NAME2 = producer
 NAME3 = consumer
+FIFO = myFifo
+SOURCE_FILE = source.txt
+DESTINATION_FILE = consumer.txt
+UP = 20
+DOWN = 20
 
-NAME4 = producer.txt
-NAME5 = consumer.txt
-
-NAME6 = myfifo
-
+# Programy wykonawcze
 EXEC1 = $(NAME1).x
 EXEC2 = $(NAME2).x
 EXEC3 = $(NAME3).x
 
-OBJS1 = $(NAME1).o
-OBJS2 = $(NAME2).o
-OBJS3 = $(NAME3).o
+# object files
+OBJS1  = $(NAME1).o
+OBJS2  = $(NAME2).o
+OBJS3  = $(NAME3).o
 
-CFLAGS = -Wall -std=c99 -pedantic -O -fPIC
-LFLAGS = -Wall -std=c99 -pedantic -O
+# Opcje kompilatora i linkera; -fPIC potrzebna dla bibliotek dzielonych
+CFLAGS = -Wall -std=gnu99 -pedantic -O -fPIC
+LFLAGS = -Wall -std=gnu99 -pedantic -O
 
-LDLIBS = -lm
+# Kompilator i linker
 CO = gcc
 LD = $(CO)
 
-%.o: %.c
-	$(CO) $(CFLAGS) -c $<
+# pliki obiektowe
+$(OBJS1): $(NAME1).c
+	$(CO) $(CFLAGS) -c $(NAME1).c
 
-.PHONY: all
-all: $(EXEC1) $(EXEC2) $(EXEC3) $(EXEC4) $(EXEC5)
+$(OBJS2): $(NAME2).c
+	$(CO) $(CFLAGS) -c $(NAME2).c
 
+$(OBJS3): $(NAME3).c
+	$(CO) $(CFLAGS) -c $(NAME3).c
+
+# programy wykonawcze
 $(EXEC1): $(OBJS1)
-	$(LD) -o $@ $(LFLAGS) $^
+	$(LD) -o $@ $(LFLAGS) $(OBJS1)
 
 $(EXEC2): $(OBJS2)
-	$(LD) -o $@ $(LFLAGS) $^
+	$(LD) -o $@ $(LFLAGS) $(OBJS2)
 
 $(EXEC3): $(OBJS3)
-	$(LD) -o $@ $(LFLAGS) $^
+	$(LD) -o $@ $(LFLAGS) $(OBJS3)
 
 .PHONY: runA runB
 
+# uruchomienie programu
 runA: $(EXEC1) $(EXEC2) $(EXEC3)
-	./$(EXEC1) $(NAME4) $(NAME5) $(NAME6) $(EXEC2) $(EXEC3)
-	rm -f $(NAME6)
-	diff $(NAME4) $(NAME5)
+	./$(EXEC1) ./$(EXEC2) ./$(EXEC3) $(EXEC2) $(EXEC3) $(FIFO) $(SOURCE_FILE) $(DESTINATION_FILE) $(UP) $(DOWN)
+	diff -s $(SOURCE_FILE) $(DESTINATION_FILE)
 
-runB: $(EXEC2) $(EXEC3)
-	mkfifo -m 0666 $(NAME6)
-	xterm -hold -title $(NAME2) -e ./$(EXEC2) $(NAME6) $(NAME4) &
-	xterm -hold -title $(NAME3) -e ./$(EXEC3) $(NAME6) $(NAME5)
-	rm $(NAME6)
-	diff $(NAME4) $(NAME5)
+runB: $(EXEC1) $(EXEC2) $(EXEC3)
+	mkfifo -m 0666 $(FIFO)
+	xterm -title $(NAME2) -e ./$(EXEC2) $(FIFO) $(SOURCE_FILE) $(UP) &
+	xterm -title $(NAME3) -e ./$(EXEC3) $(FIFO) $(DESTINATION_FILE) $(DOWN)
+	rm $(FIFO)
+	diff -s $(SOURCE_FILE) $(DESTINATION_FILE)
+
 
 .PHONY: clean tar
-clean:
-	rm -f *.o *~ *.a *.so *.x core core* a.out $(NAME5) $(NAME6)
 
+# czyszczenie katalogu
+clean:
+	rm -f *.o  *~ *.a *.so *.x core core* a.out *.gch $(DESTINATION_FILE);
+
+# Archiwizacja i kompresja
 tar: clean
 	(cd ../; tar -cvzf $(DIR).tar.gz  $(DIR) )
+
